jon-deploy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jon-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jon
  template:
    metadata:
      labels:
        app: jon
    spec:
      containers:
      - name: jon
        image: nginxdemos/hello:latest
        ports:
        - containerPort: 80
