dany-serv.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dany-svc
  labels:
    app: dany
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: dany
  externalIPs:
    - 192.168.99.4
