jon-serv.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jon-svc
  labels:
    app: jon
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: jon
  externalIPs:
    - 192.168.99.3
